[gd_scene load_steps=7 format=3 uid="uid://d44ggd3r677p"]

[ext_resource type="Script" uid="uid://dnm5mqd7nmf38" path="res://Scripts/pause_menu.gd" id="1_nwcfo"]
[ext_resource type="Shader" uid="uid://darglc5xdrh6u" path="res://Shaders/pause_menu_shader.gdshader" id="2_05uyy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p81d2"]
shader = ExtResource("2_05uyy")
shader_parameter/lod = 1.719

[sub_resource type="Animation" id="Animation_d3xb4"]
length = 0.001

[sub_resource type="Animation" id="Animation_2nc7s"]
resource_name = "new_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.719]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mxa3g"]
_data = {
&"RESET": SubResource("Animation_d3xb4"),
&"new_animation": SubResource("Animation_2nc7s")
}

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nwcfo")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_p81d2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Retry" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Home" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Home"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mxa3g")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
